--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <h1><center><b>Welcome To The Official<u> Thicc Goats </u>Website!</h1></center></b>
 
+<header>
+ <div class="container">
+  
 <nav>
  <ul>
   <li><a href="home.html">Home</a></li>
  </ul>
 </nav>
+ </div>
+  </header>
