--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 <nav>
  <ul>
-  <li><a href="home.html">Home</a></li>
+  <li><a href="random.html">random</a></li>
   <li><a href="players.html">Home</a></li>
  </ul>
 </nav>
