--- a/players.html
+++ b/players.html
@@ -1,6 +1,6 @@
-<h1><b>Players:<h1><b>
+<h2><b>Players:<h2><b>
 <br>
-<b>Captain:<br>
+<b><h1>Captain:<br>
 TG_REPLAYZ_<br><br>
 
 Co-Captain:<br>
@@ -9,4 +9,5 @@ TgCfm<br><br>
 Officers<br><br>
 
 Members:<br>
+  </h2>
 
