--- a/players.html
+++ b/players.html
@@ -1,4 +1,4 @@
-<h2><b>Players:<h2><b>
+<h1><b>Players:<b>
 <br>
 <b><h1>Captain:<br>
 TG_REPLAYZ_<br><br>
@@ -11,5 +11,5 @@ Officers<br><br>
 Members:<br>
 Bambi<br>
 Puppy_OG23<br><br>
-  </h2>
+  </h1>
 
