--- a/players.html
+++ b/players.html
@@ -1,3 +1,15 @@
+<header>
+ <div class="container">
+  
+<nav>
+ <ul>
+  <li><a href="random.html">random</a></li>
+  <li><a href="players.html">Home</a></li>
+ </ul>
+</nav>
+ </div>
+  </header>
+
 <h3><b>Players:<br></h3>
 <br>
 <b>Captain:<br>
