--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   
 <nav>
  <ul>
-  <li><a href="random.html">random</a></li>
-  <li><a href="players.html">Home</a></li>
+  <li><a href="log.html"></a>Update Log</li>
+  <li><a href="players.html">Players</a></li>
  </ul>
 </nav>
  </div>
