--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 <nav>
  <ul>
-  <li><a href="log.html"></a>Update Log</li>
+  <li><a href="log.html">Update Log</a></li>
   <li><a href="players.html">Players</a></li>
  </ul>
 </nav>
