--- a/log.html
+++ b/log.html
@@ -1,3 +1,12 @@
+<nav>
+ <ul>
+  <li><a href="log.html">Update Log</a></li>
+  <li><a href="players.html">Players</a></li>
+ </ul>
+</nav>
+ </div>
+  </header>
+
 <center><b>Update Log</center></b>
 <br>
 <center><b>1.0.0
