--- a/players.html
+++ b/players.html
@@ -1,10 +1,7 @@
-<header>
- <div class="container">
-  
-<nav>
+<<nav>
  <ul>
-  <li><a href="random.html">random</a></li>
-  <li><a href="players.html">Home</a></li>
+  <li><a href="log.html">Update Log</a></li>
+  <li><a href="players.html">Players</a></li>
  </ul>
 </nav>
  </div>
