--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@
 </nav>
  </div>
   </header>
+
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
