--- a/log.html
+++ b/log.html
@@ -11,3 +11,6 @@
 <br>
 <center><b>1.0.0
   Release Of Website</center></b>
+<br>
+<br>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
