--- a/players.html
+++ b/players.html
@@ -22,4 +22,7 @@ Bambi<br>
 Puppy_OG23<br>
 Beast9810<br><br>
   </h1>
+ <br>
+ <br>
+ <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
 
