--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <ul>
   <li><a href="log.html">Update Log</a></li>
   <li><a href="players.html">Players</a></li>
+  <li><a href="index.html">Homepage</a></li>
  </ul>
 </nav>
  </div>
