--- a/log.html
+++ b/log.html
@@ -2,6 +2,7 @@
  <ul>
   <li><a href="log.html">Update Log</a></li>
   <li><a href="players.html">Players</a></li>
+  <li><a href="index.html">Homepage</a></li>
  </ul>
 </nav>
  </div>
