--- a/players.html
+++ b/players.html
@@ -11,15 +11,15 @@
 <br>
 <br>
 <b>Captain:<br>
-TG_REPLAYZ_<br><br>
+</b>TG_REPLAYZ_<br><br>
 
-Co-Captain:<br>
-TgCfm<br><br>
+<b>Co-Captain:<br>
+</b>TgCfm<br><br>
 
-Officers<br><br>
+<b>Officers</b><br><br>
 
-Members:<br>
-Bambi<br>
+<b>Members:<br>
+</b>Bambi<br>
 Puppy_OG23<br>
 Beast9810<br><br>
   </h1>
