--- a/log.html
+++ b/log.html
@@ -10,8 +10,9 @@
 
 <center><b>Update Log</center></b>
 <br>
-<center><b>1.0.0
-  Release Of Website</center></b>
+<center><b>1.01
+  Add 'Apply' and 'Discord' buttons.</center></b>
 <br>
 <br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
+<a href="https://discord.gg/jUnU3fb>Discord</a>
