--- a/log.html
+++ b/log.html
@@ -15,4 +15,4 @@
 <br>
 <br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
-<a href="https://discord.gg/jUnU3fb>Discord</a>
+<a href="https://discord.gg/jUnU3fb">Discord</a>
