--- a/players.html
+++ b/players.html
@@ -26,4 +26,4 @@ Beast9810<br><br>
  <br>
  <br>
  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
- <a href="https://discord.gg/jUnU3fb">Discord</a>
+ <br><a href="https://discord.gg/jUnU3fb">Discord</a>
