--- a/players.html
+++ b/players.html
@@ -22,6 +22,9 @@
 </b>Bambi<br>
 Puppy_OG23<br>
 Beast9810<br><br>
+<br>
+<b>Newest Member: Beast9810<br>
+ Newest Promotion: None</b>
   </h1>
  <br>
  <br>
