--- a/players.html
+++ b/players.html
@@ -23,8 +23,8 @@
 Puppy_OG23<br>
 Beast9810<br><br>
 <br>
-<b>Newest Member: </b>Beast9810<br>
-<b>Newest Promotion: </b>None
+<b>Latest: </b>Beast9810<br>
+<b>Latest Promotion: </b>None
   </h1>
  <br>
  <br>
