--- a/players.html
+++ b/players.html
@@ -23,7 +23,7 @@
 Puppy_OG23<br>
 Beast9810<br><br>
 <br>
-<b>Latest: </b>Beast9810<br>
+<b>Latest Member: </b>Beast9810<br>
 <b>Latest Promotion: </b>None
   </h1>
  <br>
