--- a/players.html
+++ b/players.html
@@ -24,7 +24,7 @@ TG_Fastforward_<br><br>
 Puppy_OG23<br>
 Beast9810<br><br>
 <br>
-<b>Latest Member: </b>Beast9810<br>
+<b>Latest Member: </b>TF_Fastforward_<br>
 <b>Latest Promotion: </b>None
   </h1>
  <br>
