--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <li><a href="log.html">Update Log</a></li>
   <li><a href="players.html">Players</a></li>
   <li><a href="index.html">Homepage</a></li>
+  <li><a href="tournaments.html">Tournaments</a></li>
  </ul>
 </nav>
  </div>
