--- a/log.html
+++ b/log.html
@@ -1,8 +1,9 @@
 <nav>
  <ul>
+  <li><a href="index.html">Homepage</a></li>
   <li><a href="log.html">Update Log</a></li>
   <li><a href="players.html">Players</a></li>
-  <li><a href="index.html">Homepage</a></li>
+  <li><a href="tournaments.html">Tournaments</a></li>
  </ul>
 </nav>
  </div>
