--- a/tournaments.html
+++ b/tournaments.html
@@ -1,3 +1,15 @@
+<nav>
+ <ul>
+  <li><a href="index.html">Homepage</a></li>
+  <li><a href="players.html">Players</a></li>
+  <li><a href="tournaments.html">Homepage</a></li>
+  <li><a href="log.html">Update Log</a></li>
+ 
+ </ul>
+</nav>
+ </div>
+  </header>
+
 <marquee><b>Tournaments</b></marquee>
 
 <b><u>Arena</b></u>
