--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </header>
 <br>
 <br>
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply</a>
 <br>
 <a href="https://discord.gg/jUnU3fb>Discord</a>
