--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   </header>
 <br>
 <br>
+<b><u>NEWS</b></u>
+<img src="https://dribbble.com/shots/3811637-TG" alt="Logo">
+<br>
+<br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply</a>
 <br>
 <a href="https://discord.gg/jUnU3fb>Discord</a>
