--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <br>
 <br>
 <b><u>NEWS</b></u>
-<img src="https://dribbble.com/shots/3811637-TG" alt="Logo">
+<img src="https://cdn.dribbble.com/users/1732431/screenshots/3811637/tg_logo_dribbble.png" alt="Logo">
 <br>
 <br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply</a>
