--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   </header>
 <br>
 <br>
-<b><u>NEWS</b></u>
-<img src="https://cdn.dribbble.com/users/1732431/screenshots/3811637/tg_logo_dribbble.png" alt="Logo">
+<h1><b><u>NEWS</h1></b></u>
+<br><br>
+<b>Welcome Fastforward To TG!</b>
+
 <br>
 <br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply</a>
