--- a/players.html
+++ b/players.html
@@ -1,4 +1,6 @@
-<<nav>
+<h1><center><b><u>Thicc Goats</u></h1></center></b>
+
+<nav>
  <ul>
   <li><a href="index.html">Homepage</a></li>
   <li><a href="players.html">Players</a></li>
