--- a/players.html
+++ b/players.html
@@ -17,7 +17,7 @@
 </b>TG_REPLAYZ_<br><br>
 
 <b>Co-Captain:<br>
-</b>TgCfm<br><br>
+</b>TgCfm | <li><a href="tgcfm.html">TgCfm's Stats</a></li><br><br>
 
 <b>Officers</b><br>
 TG_Fastforward_<br><br>
