--- a/players.html
+++ b/players.html
@@ -14,10 +14,10 @@
 <br>
 <br>
 <b>Captain:<br>
-</b>TG_REPLAYZ_<br><br>
+</b>TG_REPLAYZ_ <li><a href="tg_replayz_.html"TG_REPLAYZ_ Stats</a><li><br><br>
 
 <b>Co-Captain:<br>
-</b>TgCfm | <li><a href="tgcfm.html">TgCfm's Stats</a></li><br><br>
+</b>TgCfm <li><a href="tgcfm.html">TgCfm's Stats</a></li><br><br>
 
 <b>Officers</b><br>
 TG_Fastforward_<br><br>
