--- a/players.html
+++ b/players.html
@@ -14,7 +14,7 @@
 <br>
 <br>
 <b>Captain:<br>
-</b>TG_REPLAYZ_ <li><a href="tg_replayz_.html"TG_REPLAYZ_ Stats</a><li><br><br>
+</b>TG_REPLAYZ_ <li><a href="tg_replayz_.html">TG_REPLAYZ_ Stats</a><li><br><br>
 
 <b>Co-Captain:<br>
 </b>TgCfm <li><a href="tgcfm.html">TgCfm's Stats</a></li><br><br>
