--- a/players.html
+++ b/players.html
@@ -25,7 +25,7 @@ TG_Fastforward_<br><br>
 <b>Members:<br>
 </b>Bambi<br>
 Puppy_OG23<br>
-Beast9810<br><br>
+Beast9810 <li><a href="beast9810.html">Beast9810's Stats</a></li><br><br>
 <br>
 <b>Latest Member: </b>TG_Fastforward_<br>
 <b>Latest Promotion: </b>None
