--- a/tournaments.html
+++ b/tournaments.html
@@ -3,7 +3,7 @@
  <ul>
   <li><a href="index.html">Homepage</a></li>
   <li><a href="players.html">Players</a></li>
-  <li><a href="tournaments.html">Homepage</a></li>
+  <li><a href="tournaments.html">Tournaments</a></li>
   <li><a href="log.html">Update Log</a></li>
  
  </ul>
@@ -13,4 +13,9 @@
 
 <b>Tournaments:</b>
 <br><br>
-<b><u>Arena</b></u>
+2v2<br>
+TG_REPLAYZ_ + TG_FASTFORWARD_<br>
+vs<br>
+TgCfm + Paxious<br>   
+<br><br>
+
