--- a/tournaments.html
+++ b/tournaments.html
@@ -14,8 +14,6 @@
 <b>Tournaments:</b>
 <br><br>
 2v2<br>
-TG_REPLAYZ_ + TG_FASTFORWARD_<br>
-vs<br>
-TgCfm + Paxious<br>   
+TG_REPLAYZ_ + TG_FASTFORWARD_<br> vs TgCfm + Paxious<br>   
 <br><br>
 
