--- a/players.html
+++ b/players.html
@@ -3,7 +3,7 @@
  <ul>
   <li><a href="index.html">Homepage</a></li>
   <li><a href="players.html">Players</a></li>
-  <li><a href="tournaments.html">Homepage</a></li>
+  <li><a href="tournaments.html">Tournaments</a></li>
   <li><a href="log.html">Update Log</a></li>
  
  </ul>
