--- a/players.html
+++ b/players.html
@@ -23,13 +23,18 @@
 TG_Fastforward_<br><br>
 
 <b>Members:<br>
-</b>Bambi<br>
+</b>Bambi / Paxious<br>
 Puppy_OG23<br>
 Beast9810 <li><a href="beast9810.html">Beast9810's Stats</a></li><br><br>
 <br>
 <b>Latest Member: </b>TG_Fastforward_<br>
 <b>Latest Promotion: </b>None
   </h1>
+
+<b>Members That Need To Share Their Stats Insists Of:<br>
+- Bambi / Paxious<br> 
+- Puppy_OG23<br>
+- TG_FASTFORWARDZ_<br>
  <br>
  <br>
  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
