--- a/tournaments.html
+++ b/tournaments.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <h1><center><b><u>Thicc Goats</u></h1></center></b>
 <nav>
  <ul>
@@ -17,3 +18,12 @@
 TG_REPLAYZ_ + TG_FASTFORWARD_<br> vs TgCfm + Paxious<br>   
 <br><br>
 
+<html>
+   <head>
+      <title>HTML Backgorund Color</title>
+   </head>
+   <body style="background-color:grey;">
+      <h1>Products</h1>
+      <p>We have developed more than 10 products till now.</p>
+   </body>
+</html>
