--- a/tournaments.html
+++ b/tournaments.html
@@ -22,7 +22,7 @@ TG_REPLAYZ_ + TG_FASTFORWARD_<br> vs TgCfm + Paxious<br>
    <head>
       <title>HTML Backgorund Color</title>
    </head>
-   <body style="background-color:red;">
+   <body style="background-color:#ffcccb;">
       <h1>Products</h1>
       <p>We have developed more than 10 products till now.</p>
    </body>
