--- a/tournaments.html
+++ b/tournaments.html
@@ -20,8 +20,8 @@ TG_REPLAYZ_ + TG_FASTFORWARD_<br> vs TgCfm + Paxious<br>
 
 <html>
    <head>
-      <title>HTML Backgorund Color</title>
+      <title>Tournaments</title>
    </head>
-   <body style="background-color:#ffcccb;">
+   <body style="background-color:black;">
    </body>
 </html>
