--- a/tournaments.html
+++ b/tournaments.html
@@ -22,6 +22,6 @@ TG_REPLAYZ_ + TG_FASTFORWARD_<br> vs TgCfm + Paxious<br>
    <head>
       <title>Tournaments</title>
    </head>
-   <body style="background-color:black;">
+   <body style="background-color:white;">
    </body>
 </html>
