--- a/log.html
+++ b/log.html
@@ -13,7 +13,7 @@
 <center><b>Update Log</center></b>
 <br>
 <center><b>1.01
-  Add 'Apply' and 'Discord' buttons.</center></b>
+  Added Tournaments | Added Stats Of Some Players | Fixed Minor Errors In Code</center></b>
 <br>
 <br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
