--- a/log.html
+++ b/log.html
@@ -12,7 +12,7 @@
 
 <center><b>Update Log</center></b>
 <br>
-<center><b>1.01
+<center><b>1.0.2:
   Added Tournaments | Added Stats Of Some Players | Fixed Minor Errors In Code</center></b>
 <br>
 <br>
