--- a/tgcfm.html
+++ b/tgcfm.html
@@ -16,3 +16,7 @@
 <b>Kills</b> 584<br><br>
 
 <b>UPDATED: 5/10/2020</b>
+<br><br>
+  <form>
+  <input type="button" value="Go back!" onclick="history.back()">
+</form>
