--- a/tgcfm.html
+++ b/tgcfm.html
@@ -18,5 +18,5 @@
 <b>UPDATED: 5/10/2020</b>
 <br><br>
   <form>
-  <input type="button" value="Go back!" onclick="history.back()">
+  <input type="button" value="Back" onclick="history.back()">
 </form>
