--- a/tgcfm.html
+++ b/tgcfm.html
@@ -1,5 +1,10 @@
 <h1>TgCfm's Stats:</h1>
-<br>
+<br><br>
+<b>Total Stats:<br>
+<b>Matches:</b> 4050<br>
+<b>Wins:</b> 84<br>
+<br>Kills:</b> 3364<br><br>
+
 <b><u>Solo:</b></u><br>
 <b>Matches:</b> 3006<br>
 <b>Wins:</b> 42<br>
