--- a/tgcfm.html
+++ b/tgcfm.html
@@ -1,9 +1,9 @@
 <h1>TgCfm's Stats:</h1>
 <br><br>
-<b>Total Stats:<br>
+<b><u>Total Stats:</b><u>
 <b>Matches:</b> 4050<br>
 <b>Wins:</b> 84<br>
-<br>Kills:</b> 3364<br><br>
+<b>Kills:</b> 3364<br><br>
 
 <b><u>Solo:</b></u><br>
 <b>Matches:</b> 3006<br>
