--- a/tg_replayz_.html
+++ b/tg_replayz_.html
@@ -1,5 +1,10 @@
 <h1>TG_REPLAYZ_'s Stats:</h1>
-<br>
+<br><br>
+<b><u>Total Stats</b><u><br>
+<b><u>Matches:<b></u> 3586<br>
+<b><u>Wins: 56</b></u><br>
+<b><u>Kills: 3641</b></u><br><br>
+  
 <b><u>Solo:</b></u><br>
 <b>Matches:</b> 270<br>
 <b>Wins:</b> 0<br>
