--- a/tg_replayz_.html
+++ b/tg_replayz_.html
@@ -1,9 +1,9 @@
 <h1>TG_REPLAYZ_'s Stats:</h1>
 <br><br>
-<b><u>Total Stats</b></u><br>
-<b><u>Matches:3586</b></u><br>
+<b><u>Total Stats</u></b><br>
+<b><u>Matches:3586</u></b><br>
 <b><u>Wins: 56</b></u><br>
-<b><u>Kills: 3641</b></u><br><br>
+<b><u>Kills: 3641</u></b><br><br>
   
 <b><u>Solo:</b></u><br>
 <b>Matches:</b> 270<br>
