--- a/tournaments.html
+++ b/tournaments.html
@@ -15,7 +15,7 @@
 <b>Tournaments:</b>
 <br><br>
 2v2<br>
-TG_REPLAYZ_ + TG_FASTFORWARD_<br> vs TgCfm + Paxious<br>   
+TG_REPLAYZ_ + TG_FASTFORWARD_ vs TgCfm + Paxious<br>   
 <br><br>
 
 <html>
