--- a/beast9810.html
+++ b/beast9810.html
@@ -18,3 +18,11 @@
 <b>UPDATED: 5/10/2020</b>
 <br><br>
   <b><u>STATS MAY NOT BE ACCURATE</b></u>
+  
+  <html>
+   <head>
+      <title>Beast9810's Stats</title>
+   </head>
+   <body style="background-color:white;">
+   </body>
+</html>
