--- a/index.html
+++ b/index.html
@@ -23,4 +23,12 @@
 <br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply</a>
 <br>
-<a href="https://discord.gg/jUnU3fb>Discord</a>
+<a href="https://discord.gg/jUnU3fb>Discord</a
+
+<html>
+   <head>
+      <title>Homepage</title>
+   </head>
+   <body style="background-color:white;">
+   </body>
+</html>
