--- a/log.html
+++ b/log.html
@@ -19,3 +19,11 @@
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
 <br>
 <a href="https://discord.gg/jUnU3fb">Discord</a>
+
+<html>
+   <head>
+      <title>Tournaments</title>
+   </head>
+   <body style="background-color:white;">
+   </body>
+</html>
