--- a/log.html
+++ b/log.html
@@ -22,7 +22,7 @@
 
 <html>
    <head>
-      <title>Tournaments</title>
+      <title>Log</title>
    </head>
    <body style="background-color:white;">
    </body>
