--- a/players.html
+++ b/players.html
@@ -41,3 +41,11 @@ Beast9810 <li><a href="beast9810.html">Beast9810's Stats</a></li><br><br>
  <br><a href="https://discord.gg/jUnU3fb">Discord</a>
 
 competitive
+
+<html>
+   <head>
+      <title>Players</title>
+   </head>
+   <body style="background-color:white;">
+   </body>
+</html>
