--- a/tg_replayz_.html
+++ b/tg_replayz_.html
@@ -23,3 +23,11 @@
 <b>UPDATED: 5/10/2020</b>
 <br><br>
   <b><u>STATS MAY NOT BE ACCURATE</b></u>
+
+<html>
+   <head>
+      <title>TG_REPLAYZ_'s Stats</title>
+   </head>
+   <body style="background-color:white;">
+   </body>
+</html>
