--- a/tgcfm.html
+++ b/tgcfm.html
@@ -25,3 +25,11 @@
   <form>
   <input type="button" value="Back" onclick="history.back()">
 </form>
+
+<html>
+   <head>
+      <title>TgCfm's Stats</title>
+   </head>
+   <body style="background-color:white;">
+   </body>
+</html>
