--- a/tournaments.html
+++ b/tournaments.html
@@ -25,3 +25,7 @@ TG_REPLAYZ_ + TG_FASTFORWARD_ vs TgCfm + Paxious<br>
    <body style="background-color:white;">
    </body>
 </html>
+
+<form>
+  <input type="button" value="Back" onclick="history.back()">
+</form>
