--- a/tg_replayz_.html
+++ b/tg_replayz_.html
@@ -22,8 +22,12 @@
 
 <b>UPDATED: 5/10/2020</b>
 <br><br>
-  <b><u>STATS MAY NOT BE ACCURATE</b></u>
+  <b><u>STATS MAY NOT BE ACCURATE</b></u><br><br>
 
+<form>
+  <input type="button" value="Back" onclick="history.back()">
+</form> 
+  
 <html>
    <head>
       <title>TG_REPLAYZ_'s Stats</title>
@@ -31,3 +35,4 @@
    <body style="background-color:white;">
    </body>
 </html>
+
