--- a/players.html
+++ b/players.html
@@ -38,7 +38,11 @@ Beast9810 <li><a href="beast9810.html">Beast9810's Stats</a></li><br><br>
  <br>
  <br>
  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
- <br><a href="https://discord.gg/jUnU3fb">Discord</a>
+ <br><a href="https://discord.gg/jUnU3fb">Discord</a><br><br>
+
+<form>
+  <input type="button" value="Back" onclick="history.back()">
+</form>
 
 competitive
 
