--- a/log.html
+++ b/log.html
@@ -18,7 +18,11 @@
 <br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
 <br>
-<a href="https://discord.gg/jUnU3fb">Discord</a>
+<a href="https://discord.gg/jUnU3fb">Discord</a><br><br>
+
+<form>
+  <input type="button" value="Back" onclick="history.back()">
+</form>
 
 <html>
    <head>
