--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 <br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply</a>
 <br>
-<a href="https://discord.gg/jUnU3fb>Discord</a
+<a href="https://discord.gg/jUnU3fb>Discord</a><br><br>
+
+<form>
+  <input type="button" value="Back" onclick="history.back()">
+</form>
 
 <html>
    <head>
@@ -32,3 +36,4 @@
    <body style="background-color:white;">
    </body>
 </html>
+
