--- a/beast9810.html
+++ b/beast9810.html
@@ -17,7 +17,11 @@
 
 <b>UPDATED: 5/10/2020</b>
 <br><br>
-  <b><u>STATS MAY NOT BE ACCURATE</b></u>
+  <b><u>STATS MAY NOT BE ACCURATE</b></u>><br><br>
+
+  <form>
+  <input type="button" value="Back" onclick="history.back()">
+</form>
   
   <html>
    <head>
