--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <li><a href="players.html">Players</a></li>
   <li><a href="tournaments.html">Tournaments</a></li>
   <li><a href="log.html">Update Log</a></li>
+  <li><a href="contact.html>Contact</a></li>
  </ul>
 </nav>
  </div>
