--- a/players.html
+++ b/players.html
@@ -14,10 +14,10 @@
 <br>
 <br>
 <b>Captain:<br>
-</b>TG_REPLAYZ_ <li><a href="tg_replayz_.html">TG_REPLAYZ_ Stats</a><li><br><br>
+</b>TG_REPLAYZ_ <li><a href="/players/tg_replayz_.html">TG_REPLAYZ_ Stats</a><li><br><br>
 
 <b>Co-Captain:<br>
-</b>TgCfm <li><a href="tgcfm.html">TgCfm's Stats</a></li><br><br>
+</b>TgCfm <li><a href="/players/tgcfm.html">TgCfm's Stats</a></li><br><br>
 
 <b>Officers</b><br>
 TG_Fastforward_<br><br>
@@ -25,7 +25,7 @@ TG_Fastforward_<br><br>
 <b>Members:<br>
 </b>Bambi / Paxious<br>
 Puppy_OG23<br>
-Beast9810 <li><a href="beast9810.html">Beast9810's Stats</a></li><br><br>
+Beast9810 <li><a href="/players/beast9810.html">Beast9810's Stats</a></li><br><br>
 <br>
 <b>Latest Member: </b>TG_Fastforward_<br>
 <b>Latest Promotion: </b>None
