--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
 <br>
 <br>
-<h1><b><u>NEWS</h1></b></u>
+   <marquee><h1><b><u>NEWS</h1></b></u></marquee>
 <br><br>
 <b>Welcome Fastforward To TG!</b>
 
