--- a/log.html
+++ b/log.html
@@ -12,8 +12,8 @@
 
 <center><b>Update Log</center></b>
 <br>
-<center><b>1.0.2:
-  Added Tournaments | Added Stats Of Some Players | Fixed Minor Errors In Code</center></b>
+<center><b>1.1.1:
+  Fixed player pages | Minor bugs fixed</center></b>
 <br>
 <br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfvgOIT9OVenC-LeWCSS-uw9gyFnyX_0XuJFVnHtjKis0NNjQ/viewform?usp=sf_link">Apply To Become A Member Of TG! (Thicc Goats)</a>
