--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <br>
    <marquee><h1><b><u>NEWS</h1></b></u></marquee>
 <br><br>
-<b>Welcome Fastforward To TG!</b>
+<center><b>You Can Now Customize Your 'Player Page'!</b></center>
 
 <br>
 <br>
