--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <h1><center><b>Welcome To The Official<u> Thicc Goats </u>Website!</h1></center></b>
 
+<head>
+<link rel=“stylesheet” type=“text/css” href=“style.css” />
+</head>
+
 <header>
  <div class="container">
   
